# docs/swagger.json
@@ -9,6 +9,44 @@
     },
     "basePath": "/api/v1/",
     "paths": {
+        "/Comment/": {
+            "get": {
+                "description": "用于获取某篇文章的评论",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "评论模块"
+                ],
+                "summary": "获取文章评论",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "文章id",
+                        "name": "ArticleID",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200,\"data\":nil,\"msg\": \"查询评论成功！\"}",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Result"
+                        }
+                    },
+                    "400": {
+                        "description": "{\"code\":400,\"data\":nil,\"msg\": \"查询评论失败！\"}",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Result"
+                        }
+                    }
+                }
+            }
+        },
         "/PublishArticle": {
             "post": {
                 "description": "用于用户发布文章",
@@ -52,8 +90,8 @@
                             "$ref": "#/definitions/controller.Result"
                         }
                     },
-                    "401": {
-                        "description": "{\"code\":401,\"data\":nil,\"msg\": \"后端获取文章失败！\"}",
+                    "400": {
+                        "description": "{\"code\":400,\"data\":nil,\"msg\": \"后端获取文章失败！\"}",
                         "schema": {
                             "$ref": "#/definitions/controller.Result"
                         }
